Remove testimonials, expand service descriptions with bullet points

--- a/index.html
+++ b/index.html
@@ -3925,26 +3925,41 @@
             <div class="more-services-grid" style="grid-template-columns: repeat(3, 1fr);">
                 <a href="service-ai.html" class="mini-service popular reveal" style="text-decoration: none; color: inherit;">
                     <h4>🎯 Agent Discovery & Strategy</h4>
-                    <p>Audit workflows, identify where AI agents save time and money</p>
+                    <p>We audit your workflows and identify exactly where AI can save you time. You'll get a concrete plan with ROI estimates — no jargon, no fluff.</p>
+                    <ul style="color: var(--text-muted); font-size: 0.85rem; margin: 1rem 0; padding-left: 1.2rem; line-height: 1.8;">
+                        <li>Workflow audit & bottleneck analysis</li>
+                        <li>AI opportunity mapping</li>
+                        <li>Cost/benefit breakdown</li>
+                    </ul>
                     <span class="price">Free Discovery Call</span>
                 </a>
 
                 <a href="service-automation.html" class="mini-service popular reveal" style="text-decoration: none; color: inherit;">
                     <h4>🔧 Agent Build & Deploy</h4>
-                    <p>Build your AI agent fleet — task runners, doc processors, pipelines</p>
+                    <p>We build custom AI agents that handle your specific tasks — email triage, document processing, data entry, appointment scheduling, and more.</p>
+                    <ul style="color: var(--text-muted); font-size: 0.85rem; margin: 1rem 0; padding-left: 1.2rem; line-height: 1.8;">
+                        <li>Custom agent development</li>
+                        <li>Integration with your existing tools</li>
+                        <li>Testing & deployment</li>
+                    </ul>
                     <span class="price">From $2,500</span>
                 </a>
 
                 <a href="service-support.html" class="mini-service popular reveal" style="text-decoration: none; color: inherit;">
                     <h4>🏢 Agentic Office Retainer</h4>
-                    <p>Agents run 24/7 with monitoring, monthly improvements, and cost caps</p>
+                    <p>Your AI agents run 24/7 with us monitoring performance, fixing issues, and improving them monthly. Predictable costs with usage caps.</p>
+                    <ul style="color: var(--text-muted); font-size: 0.85rem; margin: 1rem 0; padding-left: 1.2rem; line-height: 1.8;">
+                        <li>24/7 monitoring & maintenance</li>
+                        <li>Monthly optimization reports</li>
+                        <li>Priority support & updates</li>
+                    </ul>
                     <span class="price">From $1,500/mo</span>
                 </a>
             </div>
 
             <div style="text-align: center; margin-top: 2rem;">
                 <a href="services.html" style="color: var(--text-muted); text-decoration: none; font-size: 0.95rem; padding: 0.75rem 1.5rem; border: 1px solid var(--border); border-radius: 8px; display: inline-block; transition: all 0.3s ease;" onmouseover="this.style.color='var(--text)';this.style.borderColor='var(--primary)';this.style.background='rgba(76,105,245,0.1)'" onmouseout="this.style.color='var(--text-muted)';this.style.borderColor='var(--border)';this.style.background='transparent'">
-                    View all services (AWS, IT Support, App Development & more) →
+                    Also: AWS Hosting, IT Support, App Development & more →
                 </a>
             </div>
         </div>
@@ -4110,54 +4125,6 @@
 
     <!-- Featured Tools Carousel -->
     <!-- Testimonials -->
-    <section id="testimonials">
-        <div class="section-container">
-            <div class="section-header reveal">
-                <span class="section-badge">Testimonials</span>
-                <h2 class="section-title">Client Reviews — Rhode Island AI Solutions</h2>
-                <p class="section-subtitle">Real feedback from Rhode Island businesses we've helped.</p>
-            </div>
-
-            <div class="testimonials-grid" role="list" aria-label="Client testimonials">
-                <div class="testimonial-card reveal" role="listitem">
-                    <div class="stars" aria-label="5 out of 5 stars">★★★★★</div>
-                    <p class="testimonial-text">"They transformed our inventory management with AI. What used to take hours now happens automatically. Couldn't be happier with the results."</p>
-                    <div class="testimonial-author">
-                        <div class="author-avatar">MR</div>
-                        <div class="author-info">
-                            <h4>Maria Rodriguez</h4>
-                            <p>Cranston Hardware</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="testimonial-card reveal" role="listitem">
-                    <div class="stars" aria-label="5 out of 5 stars">★★★★★</div>
-                    <p class="testimonial-text">"Finally, an IT company that speaks plain English. They set up our document processing system and trained our staff in one afternoon."</p>
-                    <div class="testimonial-author">
-                        <div class="author-avatar">JT</div>
-                        <div class="author-info">
-                            <h4>James Thompson</h4>
-                            <p>Thompson Law Offices</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="testimonial-card reveal" role="listitem">
-                    <div class="stars" aria-label="5 out of 5 stars">★★★★★</div>
-                    <p class="testimonial-text">"The mobile app they built for our HVAC business has streamlined scheduling and dispatch. Our response time is down 40%."</p>
-                    <div class="testimonial-author">
-                        <div class="author-avatar">DC</div>
-                        <div class="author-info">
-                            <h4>David Chen</h4>
-                            <p>Chen's HVAC Services</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
     <!-- FAQ Section -->
     <section id="faq" style="padding: 5rem 0; background: var(--bg-dark);">
         <div class="section-container">
