Add Products dropdown (SwiftShot, DraftBridge, CaseVault), clean up nav

--- a/index.html
+++ b/index.html
@@ -3795,16 +3795,10 @@
     <!-- Mobile Menu Overlay -->
     <div class="mobile-menu" id="mobileMenu" role="dialog" aria-modal="true" aria-label="Navigation menu" aria-hidden="true">
         <a href="#services" data-mobile-link>Services</a>
-        <a href="#products" data-mobile-link>Products</a>
+        <a href="products.html" data-mobile-link>Products</a>
         <a href="#demo" data-mobile-link>AI Demo</a>
-        <a href="#testimonials" data-mobile-link>Reviews</a>
         <a href="blog.html" data-mobile-link>Blog</a>
-        <a href="/youtube-trends" data-mobile-link>📊 YouTube Trends</a>
-        <a href="/intake" data-mobile-link>⚖️ Case Trends</a>
-        <a href="/ri-report.html" data-mobile-link>🏠 RI Real Estate</a>
         <a href="#private-ai" data-mobile-link>Private AI</a>
-        <a href="#research" data-mobile-link>Research</a>
-        <a href="games.html" data-mobile-link>🎮 Arcade</a>
         <a href="#contact" data-mobile-link>Contact Us</a>
     </div>
 
@@ -3814,33 +3808,22 @@
             <a href="#hero" class="logo" aria-label="AIBridges - Back to top">AIBridges</a>
             <ul class="nav-links" role="menubar">
                 <li><a href="#services" data-nav>Services</a></li>
-                <li><a href="#products" data-nav>Products</a></li>
+                <li class="nav-dropdown">
+                    <a href="products.html" data-nav>Products</a>
+                    <div class="dropdown-menu">
+                        <a href="/swiftshot">⚡ SwiftShot</a>
+                        <a href="/draftbridge">📝 DraftBridge</a>
+                        <a href="casevault.html">⚖️ CaseVault</a>
+                        <a href="products.html">📦 View All Products</a>
+                    </div>
+                </li>
                 <li><a href="#demo" data-nav>AI Demo</a></li>
-                <li><a href="#testimonials" data-nav>Reviews</a></li>
                 <li><a href="blog.html" data-nav>Blog</a></li>
                 <li class="nav-dropdown">
                     <a href="#" data-nav>Tools</a>
                     <div class="dropdown-menu">
                         <a href="/ri-report.html">🏠 RI Real Estate</a>
-                        <a href="/youtube-trends">📊 YouTube Trends</a>
                         <a href="/kb.html">📚 Knowledge Base</a>
-                    </div>
-                </li>
-                <li class="nav-dropdown">
-                    <a href="#research" data-nav>Research</a>
-                    <div class="dropdown-menu">
-                        <a href="/ouroboros/">🐜 Ouroboros Colony</a>
-                        <a href="/ouroboros/research-paper.html">📄 Research Paper</a>
-                    </div>
-                </li>
-                <li class="nav-dropdown">
-                    <a href="games.html" data-nav>Arcade</a>
-                    <div class="dropdown-menu">
-                        <a href="mouse-game.html">🐭 Mouse Trap!</a>
-                        <a href="rocket-game.html">🚀 Rocket Blaster</a>
-                        <a href="racecar-game.html">🏎️ Apex Drift</a>
-                        <a href="dolphin-game.html">🐬 Dolphin Splash!</a>
-                        <a href="dino-game.html">🦖 Dino Roam!</a>
                     </div>
                 </li>
                 <li><a href="#contact" class="nav-cta">Contact Us</a></li>
