Rewrite Why section: clearer, human language, no jargon

--- a/index.html
+++ b/index.html
@@ -4001,27 +4001,27 @@
         <div class="section-container">
             <div class="section-header reveal">
                 <span class="section-badge">Why AIBridges</span>
-                <h2 class="section-title">Why Rhode Island Businesses Choose AIBridges</h2>
-                <p class="section-subtitle">We don't just talk about AI agents. We built an agentic office, ran it, broke it, and learned exactly what it takes to make it reliable.</p>
+                <h2 class="section-title">Why Work With Us</h2>
+                <p class="section-subtitle">We've been where you are — buried in repetitive tasks, wishing for more hours in the day. We built AI to fix that.</p>
             </div>
 
             <div class="why-grid" role="list" aria-label="Why choose AIBridges">
                 <div class="why-card reveal" role="listitem">
                     <div class="why-icon" aria-hidden="true">🛡️</div>
-                    <h3>Battle-Tested Architecture</h3>
-                    <p>Self-healing agents need hard caps and circuit breakers. Our deployments include the safeguards most providers skip.</p>
+                    <h3>It Actually Works</h3>
+                    <p>We don't deploy and disappear. Every AI we build has guardrails — automatic limits, error handling, human escalation paths. If something breaks at 2am, it fixes itself or alerts us. Not you.</p>
                 </div>
 
                 <div class="why-card reveal" role="listitem">
                     <div class="why-icon" aria-hidden="true">💰</div>
-                    <h3>Transparent Pricing</h3>
-                    <p>Token costs, API fees, management hours — all visible in your monthly report. Predictable costs with usage caps and smart batching.</p>
+                    <h3>No Surprise Bills</h3>
+                    <p>AI can get expensive fast if nobody's watching. We cap your costs upfront, batch requests smartly, and show you exactly what you're paying for each month. No mysteries.</p>
                 </div>
 
                 <div class="why-card reveal" role="listitem">
                     <div class="why-icon" aria-hidden="true">📍</div>
-                    <h3>Local & Direct</h3>
-                    <p>Based in Cranston, RI. You talk directly to the engineer who builds your agents. No call centers, no account managers.</p>
+                    <h3>One Person. One Number.</h3>
+                    <p>You'll talk to the same engineer who builds your system — not a support queue, not an account manager reading a script. Based in Cranston. Call or text anytime.</p>
                 </div>
             </div>
 
