--- a/index.html
+++ b/index.html
@@ -3823,7 +3823,15 @@
                     <a href="#" data-nav>Tools</a>
                     <div class="dropdown-menu">
                         <a href="/ri-report.html">🏠 RI Real Estate</a>
+                        <a href="/youtube-trends">📊 YouTube Trends</a>
                         <a href="/kb.html">📚 Knowledge Base</a>
+                    </div>
+                </li>
+                <li class="nav-dropdown">
+                    <a href="/ouroboros/" data-nav>Research</a>
+                    <div class="dropdown-menu">
+                        <a href="/ouroboros/">🐜 Ouroboros Colony</a>
+                        <a href="/ouroboros/research-paper.html">📄 Research Paper</a>
                     </div>
                 </li>
                 <li><a href="#contact" class="nav-cta">Contact Us</a></li>
