Restore Arcade dropdown

--- a/index.html
+++ b/index.html
@@ -3834,6 +3834,16 @@
                         <a href="/ouroboros/research-paper.html">📄 Research Paper</a>
                     </div>
                 </li>
+                <li class="nav-dropdown">
+                    <a href="games.html" data-nav>Arcade</a>
+                    <div class="dropdown-menu">
+                        <a href="mouse-game.html">🐭 Mouse Trap!</a>
+                        <a href="rocket-game.html">🚀 Rocket Blaster</a>
+                        <a href="racecar-game.html">🏎️ Apex Drift</a>
+                        <a href="dolphin-game.html">🐬 Dolphin Splash!</a>
+                        <a href="dino-game.html">🦖 Dino Roam!</a>
+                    </div>
+                </li>
                 <li><a href="#contact" class="nav-cta">Contact Us</a></li>
             </ul>
             <button class="hamburger" id="hamburger" aria-label="Toggle navigation menu" aria-expanded="false" aria-controls="mobileMenu">
