Create personalized service pages with detailed copy for all 3 AI services

--- a/index.html
+++ b/index.html
@@ -3924,7 +3924,7 @@
             </div>
 
             <div class="more-services-grid" style="grid-template-columns: repeat(3, 1fr);">
-                <a href="service-ai.html" class="mini-service popular reveal" style="text-decoration: none; color: inherit;">
+                <a href="service-agent-discovery.html" class="mini-service popular reveal" style="text-decoration: none; color: inherit;">
                     <h4>🎯 Agent Discovery & Strategy</h4>
                     <p>We audit your workflows and identify exactly where AI can save you time. You'll get a concrete plan with ROI estimates — no jargon, no fluff.</p>
                     <ul style="color: var(--text-muted); font-size: 0.85rem; margin: 1rem 0; padding-left: 1.2rem; line-height: 1.8;">
@@ -3935,7 +3935,7 @@
                     <span class="price">Free Discovery Call</span>
                 </a>
 
-                <a href="service-automation.html" class="mini-service popular reveal" style="text-decoration: none; color: inherit;">
+                <a href="service-agent-build.html" class="mini-service popular reveal" style="text-decoration: none; color: inherit;">
                     <h4>🔧 Agent Build & Deploy</h4>
                     <p>We build custom AI agents that handle your specific tasks — email triage, document processing, data entry, appointment scheduling, and more.</p>
                     <ul style="color: var(--text-muted); font-size: 0.85rem; margin: 1rem 0; padding-left: 1.2rem; line-height: 1.8;">
@@ -3946,7 +3946,7 @@
                     <span class="price">From $2,500</span>
                 </a>
 
-                <a href="service-support.html" class="mini-service popular reveal" style="text-decoration: none; color: inherit;">
+                <a href="service-agentic-office.html" class="mini-service popular reveal" style="text-decoration: none; color: inherit;">
                     <h4>🏢 Agentic Office Retainer</h4>
                     <p>Your AI agents run 24/7 with us monitoring performance, fixing issues, and improving them monthly. Predictable costs with usage caps.</p>
                     <ul style="color: var(--text-muted); font-size: 0.85rem; margin: 1rem 0; padding-left: 1.2rem; line-height: 1.8;">
@@ -4428,8 +4428,8 @@
             <div class="footer-col">
                 <h4>Services</h4>
                 <ul>
-                    <li><a href="service-ai.html">Agent Discovery</a></li>
-                    <li><a href="service-automation.html">Agent Deployment</a></li>
+                    <li><a href="service-agent-discovery.html">Agent Discovery</a></li>
+                    <li><a href="service-agent-build.html">Agent Deployment</a></li>
                     <li><a href="#services">Agentic Office Retainer</a></li>
                     <li><a href="service-aws.html">AWS Cloud Services</a></li>
                 </ul>
