--- a/casevault.html
+++ b/casevault.html
@@ -21,6 +21,10 @@
         .hero { min-height: 100vh; display: flex; flex-direction: column; align-items: center; justify-content: center; text-align: center; padding: 100px 24px 60px; background: linear-gradient(180deg, #0f172a 0%, #1e1b4b 100%); position: relative; overflow: hidden; }
         .hero::before { content: ''; position: absolute; top: 50%; left: 50%; width: 800px; height: 800px; background: radial-gradient(circle, rgba(76, 130, 230, 0.1) 0%, transparent 70%); transform: translate(-50%, -50%); }
         
+        .bg-pillars { position: absolute; left: -50px; bottom: 0; width: 300px; height: auto; opacity: 0.15; pointer-events: none; z-index: 0; }
+        .bg-map { position: absolute; right: -100px; top: 50%; transform: translateY(-50%); width: 450px; height: auto; opacity: 0.12; pointer-events: none; z-index: 0; }
+        @media (max-width: 900px) { .bg-pillars, .bg-map { display: none; } }
+        
         .badge { display: inline-flex; align-items: center; gap: 8px; background: rgba(76, 130, 230, 0.15); border: 1px solid rgba(76, 130, 230, 0.3); padding: 8px 16px; border-radius: 30px; font-size: 13px; color: #6C5CE7; margin-bottom: 24px; }
         .badge-dot { width: 8px; height: 8px; background: #34d399; border-radius: 50%; animation: pulse 2s infinite; }
         @keyframes pulse { 0%, 100% { opacity: 1; } 50% { opacity: 0.5; } }
@@ -89,6 +93,8 @@
     </nav>
 
     <section class="hero">
+        <img src="casevault-pillars.png" alt="" class="bg-pillars" aria-hidden="true">
+        <img src="casevault-map.png" alt="" class="bg-map" aria-hidden="true">
         <div class="badge">
             <span class="badge-dot"></span>
             Settlement Intelligence Platform
