--- a/casevault.html
+++ b/casevault.html
@@ -25,6 +25,8 @@
         .bg-map { position: absolute; right: -100px; top: 50%; transform: translateY(-50%); width: 450px; height: auto; opacity: 0.12; pointer-events: none; z-index: 0; }
         @media (max-width: 900px) { .bg-pillars, .bg-map { display: none; } }
         
+        .hero .badge, .hero h1, .hero > p, .hero .cta-row, .hero .stats { position: relative; z-index: 10; }
+        
         .badge { display: inline-flex; align-items: center; gap: 8px; background: rgba(76, 130, 230, 0.15); border: 1px solid rgba(76, 130, 230, 0.3); padding: 8px 16px; border-radius: 30px; font-size: 13px; color: #6C5CE7; margin-bottom: 24px; }
         .badge-dot { width: 8px; height: 8px; background: #34d399; border-radius: 50%; animation: pulse 2s infinite; }
         @keyframes pulse { 0%, 100% { opacity: 1; } 50% { opacity: 0.5; } }
