Add metallic shimmer effect to RI Real Estate Hub title

--- a/ri-report.html
+++ b/ri-report.html
@@ -51,6 +51,29 @@
  
  .hero { text-align: center; padding: 2rem; background: rgba(99,102,241,0.1); border-radius: 16px; margin-bottom: 1.5rem; border: 1px solid rgba(99,102,241,0.2); }
  h1 { font-size: 2.5rem; font-weight: 800; color: #f8fafc; }
+ 
+ /* Metallic shimmer effect */
+ .shimmer-title {
+   background: linear-gradient(
+     90deg, 
+     #e2e8f0 0%, 
+     #f8fafc 20%, 
+     #94a3b8 40%,
+     #cbd5e1 50%,
+     #f8fafc 60%,
+     #e2e8f0 80%,
+     #94a3b8 100%
+   );
+   background-size: 200% 100%;
+   -webkit-background-clip: text;
+   -webkit-text-fill-color: transparent;
+   background-clip: text;
+   animation: shimmer 3s linear infinite;
+ }
+ @keyframes shimmer {
+   0% { background-position: 100% 0; }
+   100% { background-position: -100% 0; }
+ }
  .subtitle { color: #94a3b8; font-size: 1.1rem; margin-top: 0.5rem; }
  
  .stats-grid { display: grid; grid-template-columns: repeat(5, 1fr); gap: 1rem; margin: 2rem 0; }
@@ -281,7 +304,7 @@
  
  <!-- HERO / HOMEPAGE -->
  <div class="hero" style="padding:2rem 2rem 1.5rem">
- <h1>Rhode Island Real Estate Hub</h1>
+ <h1 class="shimmer-title">Rhode Island Real Estate Hub</h1>
  <p class="subtitle" id="heroSubtitle">36,000+ MLS Listings • 77 Towns • Updated Daily</p>
  </div>
  
