Move large GLB files to S3 (Cloudflare 25MB limit)

--- a/racecar-game.html
+++ b/racecar-game.html
@@ -273,9 +273,9 @@ const { Scene, PerspectiveCamera, WebGLRenderer, Vector3, Vector2,
 
 // ---- GLB Car Models ----
 const CAR_DEFS = [
-  { name: 'CONVERTIBLE', file: 'Meshy_AI_make_a_convertible_b_0216034646_texture.glb', color: '#ff6b35' },
-  { name: 'JEEP', file: 'Meshy_AI_Make_a_black_jeep_for_0216034637_texture.glb', color: '#3388FF' },
-  { name: 'RACECAR', file: 'Meshy_AI_Make_a_red_racecar_0216034631_texture.glb', color: '#ff2d55' },
+  { name: 'CONVERTIBLE', file: 'https://draftbridge-addin.s3.amazonaws.com/assets/Meshy_AI_make_a_convertible_b_0216034646_texture.glb', color: '#ff6b35' },
+  { name: 'JEEP', file: 'https://draftbridge-addin.s3.amazonaws.com/assets/Meshy_AI_Make_a_black_jeep_for_0216034637_texture.glb', color: '#3388FF' },
+  { name: 'RACECAR', file: 'https://draftbridge-addin.s3.amazonaws.com/assets/Meshy_AI_Make_a_red_racecar_0216034631_texture.glb', color: '#ff2d55' },
 ];
 const loadedModels = [null, null, null]; // Stores the loaded GLTF scenes
 let selectedCarIndex = 0;
