Use Playfair Display font for RI Real Estate Hub title

--- a/ri-report.html
+++ b/ri-report.html
@@ -24,6 +24,11 @@
  <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
  <link rel="dns-prefetch" href="https://nominatim.openstreetmap.org">
  
+ <!-- Premium headline font -->
+ <link rel="preconnect" href="https://fonts.googleapis.com">
+ <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+ <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700;800;900&display=swap" rel="stylesheet">
+ 
  <!-- Critical: pako needed for decompression -->
  <script src="https://cdnjs.cloudflare.com/ajax/libs/pako/2.1.0/pako.min.js"></script>
  <!-- Defer non-critical scripts -->
@@ -52,8 +57,11 @@
  .hero { text-align: center; padding: 2rem; background: rgba(99,102,241,0.1); border-radius: 16px; margin-bottom: 1.5rem; border: 1px solid rgba(99,102,241,0.2); }
  h1 { font-size: 2.5rem; font-weight: 800; color: #f8fafc; }
  
- /* Metallic shimmer effect */
+ /* Metallic shimmer effect with premium font */
  .shimmer-title {
+   font-family: 'Playfair Display', Georgia, serif;
+   font-weight: 800;
+   letter-spacing: -0.02em;
    background: linear-gradient(
      90deg, 
      #e2e8f0 0%, 
