--- a/ri-report.html
+++ b/ri-report.html
@@ -27,7 +27,7 @@
  <!-- Premium headline font -->
  <link rel="preconnect" href="https://fonts.googleapis.com">
  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
- <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700;800;900&display=swap" rel="stylesheet">
+ <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
  
  <!-- Critical: pako needed for decompression -->
  <script src="https://cdnjs.cloudflare.com/ajax/libs/pako/2.1.0/pako.min.js"></script>
@@ -51,7 +51,7 @@
   --card-border: rgba(99, 102, 241, 0.2);
 }
  * { margin: 0; padding: 0; box-sizing: border-box; }
- body { font-family: 'Lato', system-ui, sans-serif; background: var(--darker); color: var(--text); line-height: 1.6; min-height: 100vh; }
+ body { font-family: 'Playfair Display', Georgia, serif; background: var(--darker); color: var(--text); line-height: 1.6; min-height: 100vh; }
  .container { max-width: 1400px; margin: 0 auto; padding: 2rem; }
  
  .hero { text-align: center; padding: 2rem; background: rgba(99,102,241,0.1); border-radius: 16px; margin-bottom: 1.5rem; border: 1px solid rgba(99,102,241,0.2); }
