--- a/ri-report.html
+++ b/ri-report.html
@@ -82,6 +82,48 @@
    0% { background-position: 100% 0; }
    100% { background-position: -100% 0; }
  }
+ 
+ /* Rotating text effect */
+ .rotating-text {
+   font-size: 1.4rem;
+   color: #94a3b8;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   gap: 0.4em;
+   margin-top: 0.75rem;
+ }
+ .static-text {
+   color: #94a3b8;
+ }
+ .rotating-wrapper {
+   overflow: hidden;
+   height: 1.5em;
+   position: relative;
+ }
+ .rotating-words {
+   display: block;
+   position: relative;
+   animation: rotateWords 10s infinite;
+ }
+ .rotating-words span {
+   display: block;
+   height: 1.5em;
+   line-height: 1.5em;
+   color: #22d3ee;
+   font-weight: 600;
+ }
+ @keyframes rotateWords {
+   0%, 16% { transform: translateY(0); }
+   20%, 36% { transform: translateY(-1.5em); }
+   40%, 56% { transform: translateY(-3em); }
+   60%, 76% { transform: translateY(-4.5em); }
+   80%, 96% { transform: translateY(-6em); }
+   100% { transform: translateY(0); }
+ }
+ @media (max-width: 768px) {
+   .rotating-text { font-size: 1.1rem; flex-direction: column; gap: 0.2em; }
+ }
  .subtitle { color: #94a3b8; font-size: 1.1rem; margin-top: 0.5rem; }
  
  .stats-grid { display: grid; grid-template-columns: repeat(5, 1fr); gap: 1rem; margin: 2rem 0; }
@@ -313,7 +355,22 @@
  <!-- HERO / HOMEPAGE -->
  <div class="hero" style="padding:2rem 2rem 1.5rem">
  <h1 class="shimmer-title">Rhode Island Real Estate Hub</h1>
- <p class="subtitle" id="heroSubtitle">36,000+ MLS Listings • 77 Towns • Updated Daily</p>
+ 
+ <!-- Rotating text effect -->
+ <div class="rotating-text">
+   <span class="static-text">Your source for</span>
+   <span class="rotating-wrapper">
+     <span class="rotating-words">
+       <span>market data</span>
+       <span>price trends</span>
+       <span>neighborhood insights</span>
+       <span>deal finding</span>
+       <span>investment analysis</span>
+     </span>
+   </span>
+ </div>
+ 
+ <p class="subtitle" id="heroSubtitle" style="margin-top:1rem">36,000+ MLS Listings • 77 Towns • Updated Daily</p>
  </div>
  
  <!-- AI Agent Promo Tile -->
