UX: Move loading bar to corner, add skeleton loaders

--- a/ri-report.html
+++ b/ri-report.html
@@ -473,26 +473,30 @@
         </div>
     </div>
 
-    <!-- Loading indicator -->
-    <div id="mainLoadingBar" style="background:rgba(99,102,241,0.2);border-radius:8px;padding:0.75rem 1rem;margin-bottom:1rem;display:flex;align-items:center;gap:0.75rem">
-      <div style="width:20px;height:20px;border:2px solid #6366f1;border-top-color:transparent;border-radius:50%;animation:spin 1s linear infinite"></div>
-      <span style="color:#94a3b8;font-size:0.9rem">Loading market data...</span>
+    <!-- Loading indicator - subtle corner badge -->
+    <div id="mainLoadingBar" style="position:fixed;bottom:1rem;right:1rem;background:rgba(15,23,42,0.95);border:1px solid rgba(99,102,241,0.3);border-radius:999px;padding:0.5rem 1rem;display:flex;align-items:center;gap:0.5rem;z-index:1000;box-shadow:0 4px 20px rgba(0,0,0,0.3)">
+      <div style="width:14px;height:14px;border:2px solid #6366f1;border-top-color:transparent;border-radius:50%;animation:spin 1s linear infinite"></div>
+      <span style="color:#94a3b8;font-size:0.8rem">Loading...</span>
     </div>
-    <style>@keyframes spin{to{transform:rotate(360deg)}}</style>
+    <style>
+@keyframes spin{to{transform:rotate(360deg)}}
+@keyframes shimmer{0%{background-position:-200% 0}100%{background-position:200% 0}}
+.skeleton-line{height:1.1em;background:linear-gradient(90deg,rgba(99,102,241,0.1) 25%,rgba(99,102,241,0.2) 50%,rgba(99,102,241,0.1) 75%);background-size:200% 100%;animation:shimmer 1.5s infinite;border-radius:4px;margin:0.3rem 0}
+</style>
 
     <h2>Key Market Insights</h2>
  <div class="insight-grid">
         <div class="insight-card insight-hover" data-chart="inland">
             <h3><span style="opacity:0.7">🏔️</span> Top 5 Inland</h3>
  <div id="insightTopCities" style="display:grid;gap:0.4rem;font-size:0.95rem;margin:0.5rem 0">
- <div style="color:#94a3b8">Loading...</div>
+ <div class="skeleton-line"></div><div class="skeleton-line" style="width:85%"></div><div class="skeleton-line" style="width:70%"></div>
  </div>
  <span class="hover-hint">Hover for trend</span>
  </div>
  <div class="insight-card insight-hover" data-chart="dom">
  <h3>Fastest to Sell</h3>
  <div id="insightFastestSell" style="display:grid;gap:0.4rem;font-size:0.95rem;margin:0.5rem 0">
- <div style="color:#94a3b8">Loading...</div>
+ <div class="skeleton-line"></div><div class="skeleton-line" style="width:80%"></div><div class="skeleton-line" style="width:65%"></div>
  </div>
  <span class="hover-hint">Hover for trend</span>
  </div>
